Add Controller PessoasJuridicas and Actons, Views

--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Shared/PartialsLayout/_MenuLeft.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Shared/PartialsLayout/_MenuLeft.cshtml
@@ -60,6 +60,10 @@
                 <li><a href="/Home/CidAdaptada"><span class="txt">Lista de CIDs</span></a></li>
                 <li><a href="/Home/Endereco"><span class="txt">Endereços</span></a></li>
                 <li><a href="/UniGeog/Listar"><span class="txt">Unde Geográfica</span></a></li>
+                <li><a href="/PessoasFisicas/Index"><span class="txt">Pessoa Física</span></a></li>
+                <li><a href="/PessoasJuridicas/Index"><span class="txt">Pessoa Jurídicas</span></a></li>
+
+
                 @*<li><a href="/Home/UnidadeGeografica"><span class="txt">U.Geog Angular</span></a></li>*@
 
                 <li><a href="/Home/Especialidade"><span class="txt">Especialidades</span></a></li>
