--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Mural/Credencial.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Mural/Credencial.cshtml
@@ -3,7 +3,7 @@
 @model Cooperchip.MedicalManagement.Domain.Entidade.Mural
 
 @Scripts.Render("~/bundles/jquery")
-@Scripts.Render("~/bundles/jqueryval")
+@Scripts.Render("~/bundles/jformval")
 
 @{
     Layout = null;
