--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Shared/_Layout.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Shared/_Layout.cshtml
@@ -330,7 +330,7 @@
     <!-- Other plugins ( load only nessesary plugins for every page) -->
     @Scripts.Render("~/bundles/formonlypage")
 
-    @*@Scripts.Render("~/bundles/jqueryval")*@
+    @*@Scripts.Render("~/bundles/jformval")*@
     @Scripts.Render("~/bundles/angularjs")
     @Scripts.Render("~/bundles/angularservices")
     @Scripts.Render("~/bundles/angularctrl")
