--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Alergia/Create.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Alergia/Create.cshtml
@@ -41,7 +41,7 @@
 </div><!-- /.modal-dialog -->
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jformval")
 }
 
 
