--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Alergia/Delete.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Alergia/Delete.cshtml
@@ -51,6 +51,6 @@
 </div><!-- /.modal-dialog -->
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jformval")
 }
 
