--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Alergia/Edit.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Alergia/Edit.cshtml
@@ -50,6 +50,6 @@
 </div><!-- /.modal-dialog -->
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jformval")
 }
 
