--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Complicacao/Create.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Complicacao/Create.cshtml
@@ -45,7 +45,7 @@
 </div><!-- /.modal-dialog -->
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jformval")
 }
 
 
