--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Complicacao/Edit.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Complicacao/Edit.cshtml
@@ -52,7 +52,7 @@
 </div><!-- /.modal-dialog -->
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jformval")
 }
 
 
