--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/HistoriaPatologicaPregressa/Create.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/HistoriaPatologicaPregressa/Create.cshtml
@@ -44,6 +44,6 @@
 </div><!-- /.modal-dialog -->
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jformval")
 }
 
