--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/UsersAdmin/Delete.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/UsersAdmin/Delete.cshtml
@@ -33,5 +33,5 @@
 </div><!-- /.modal-dialog -->
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jformval")
 }
