--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/UsersAdmin/Details.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/UsersAdmin/Details.cshtml
@@ -97,5 +97,5 @@
 </div><!-- /.modal-dialog -->
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jformval")
 }
