--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Medicos/Delete.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Medicos/Delete.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Especialidade.Descricao)
+            Especialidade
         </dt>
 
         <dd>
@@ -28,11 +28,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Nome)
+            @Html.DisplayNameFor(model => model.PessoaFisica.NomeOuRazaoSocial)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Nome)
+            @Html.DisplayFor(model => model.PessoaFisica.NomeOuRazaoSocial)
         </dd>
 
         <dt>
