--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Medicos/Details.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Medicos/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Especialidade.Descricao)
+            Especialidade
         </dt>
 
         <dd>
@@ -27,11 +27,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Nome)
+            @Html.DisplayNameFor(model => model.PessoaFisica.NomeOuRazaoSocial)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Nome)
+            @Html.DisplayFor(model => model.PessoaFisica.NomeOuRazaoSocial)
         </dd>
 
         <dt>
@@ -77,6 +77,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.MedicoId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.MedicoId }, new { @class="btn btn-primary btn-transparent" })
+    @Html.ActionLink("Voltar", "Index", null, new { @class= "btn btn-default btn-transparent" })
 </p>
