--- a/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Medicos/Index.cshtml
+++ b/MMSysCodingCraft/src/Cooperchip.MedicalManagement.Web/Views/Medicos/Index.cshtml
@@ -24,7 +24,7 @@
                     <div class="ibox-tools">
 
                         <a href="/Home/Index" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="Voltar para a Home" data-original-title="Voltar para a Home"> <i class="glyphicon glyphicon-home"></i></a>
-                        <button class="btn btn-primary btn-transparent create" data-toggle="tooltip" data-placement="bottom" title="Adicionar novo Médico" data-original-title="Adicionar novo Médico"> <i class="glyphicon glyphicon-briefcase"></i> </button>
+                        <a href="/Medicos/Create" class="btn btn-primary btn-transparent create" data-toggle="tooltip" data-placement="bottom" title="Adicionar novo Médico" data-original-title="Adicionar novo Médico"> <i class="glyphicon glyphicon-briefcase"></i> </a>
 
                         <hr />
                         <div class="ibox-content">
@@ -33,7 +33,7 @@
                                 <thead>
                                     <tr>
                                         <th>
-                                            Nome do Médico
+                                            Nome
                                         </th>
                                         <th>
                                             Especialidade
@@ -90,11 +90,11 @@
                                         <td>
 
 
-                                            <button class="btn btn-primary btn-transparent edit" data-id="@item.MedicoId" data-toggle="tooltip" data-placement="bottom" title="Editar Médico" data-original-title="Editar Médico"><i class="glyphicon glyphicon-edit"></i></button>
+                                            <a href="/Medicos/Edit/@item.MedicoId" class="btn btn-primary btn-transparent edit" data-id="@item.MedicoId" data-toggle="tooltip" data-placement="bottom" title="Editar Médico" data-original-title="Editar Médico"><i class="glyphicon glyphicon-edit"></i></a>
 
-                                            <button class="btn btn-default btn-transparent details" data-id="@item.MedicoId" data-toggle="tooltip" data-placement="bottom" title="Detalhes do Médico" data-original-title="Detalhes do Médico"><i class="glyphicon glyphicon-exclamation-sign"></i></button>
+                                            <a href="/Medicos/Details/@item.MedicoId" class="btn btn-default btn-transparent details" data-id="@item.MedicoId" data-toggle="tooltip" data-placement="bottom" title="Detalhes do Médico" data-original-title="Detalhes do Médico"><i class="glyphicon glyphicon-exclamation-sign"></i></a>
 
-                                            <button class="btn btn-danger btn-transparent delete" data-id="@item.MedicoId" data-toggle="tooltip" data-placement="bottom" title="Excluir Médico" data-original-title="Excluir Médico"><i class="glyphicon glyphicon-trash"></i></button>
+                                            <a href="/Medicos/Delete/@item.MedicoId" class="btn btn-danger btn-transparent delete" data-id="@item.MedicoId" data-toggle="tooltip" data-placement="bottom" title="Excluir Médico" data-original-title="Excluir Médico"><i class="glyphicon glyphicon-trash"></i></a>
 
                                         </td>
                                     </tr>
@@ -103,7 +103,7 @@
                                 <tfoot>
                                     <tr>
                                         <th>
-                                            Nome do Médico
+                                            Nome
                                         </th>
                                         <th>
                                             Especialidade
@@ -152,33 +152,33 @@
             });
         });
 
-        $(".edit").click(function () {
-            var id = $(this).attr("data-id");
-            $("#modal").load("/Medicos/Edit?id=" + id, function () {
-                $("#modal").modal();
-            });
-        });
+        //$(".edit").click(function () {
+        //    var id = $(this).attr("data-id");
+        //    $("#modal").load("/Medicos/Edit?id=" + id, function () {
+        //        $("#modal").modal();
+        //    });
+        //});
 
-        $(".details").click(function () {
-            var id = $(this).attr("data-id");
-            $("#modal").load("/Medicos/Details?id=" + id, function () {
-                $("#modal").modal();
-            });
-        });
+        //$(".details").click(function () {
+        //    var id = $(this).attr("data-id");
+        //    $("#modal").load("/Medicos/Details?id=" + id, function () {
+        //        $("#modal").modal();
+        //    });
+        //});
 
-        $(".delete").click(function () {
-            var id = $(this).attr("data-id");
-            $("#modal").load("/Medicos/Delete?id=" + id, function () {
-                $("#modal").modal();
-            });
-        });
+        //$(".delete").click(function () {
+        //    var id = $(this).attr("data-id");
+        //    $("#modal").load("/Medicos/Delete?id=" + id, function () {
+        //        $("#modal").modal();
+        //    });
+        //});
 
 
-        $(".create").click(function () {
-            $("#modal").load("/Medicos/Create", function () {
-                $("#modal").modal();
-            });
-        });
+        //$(".create").click(function () {
+        //    $("#modal").load("/Medicos/Create", function () {
+        //        $("#modal").modal();
+        //    });
+        //});
 
 
     </script>
